test/visibility/private/uses/accessMulti3.good
accessMulti3.chpl:3: error: unresolved call 'f()'
