test/visibility/private/uses/accessMulti3.chpl
use definesMultiUse;

f();
// Should fail, Inner3.f() is not visible because the use of Inner3 in
// definesMultiUse is private
